--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
 [build]
 publish = "/build"
 command = "yarn build"
+
+[functions]
+directory = "lambda/"
+
+[dev]
+command = "yarn dev"
+port = 4000
+publish = "build"
