--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "semi": false,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "singleQuote": true,
-  "printWidth": 80,
+  "singleQuote": false,
+  "printWidth": 100,
   "arrowParens": "always"
 }
